--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,6 +4,7 @@
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
+  color: maroon;
 }
 
 .headingXl {
@@ -48,6 +49,10 @@
 }
 
 .lightText {
-  color: #666;
+  color: midnightBlue;
   font-size: .85rem;
+}
+
+strong {
+  color: indigo;
 }
